--- a/index.html
+++ b/index.html
@@ -61,7 +61,17 @@
             Crowdsourced site for vaccine availability
         </td>
     </tr>
-     <tr><td>Colorado</td><td>&nbsp;</td></tr>
+     <tr>
+        <td>Colorado</td>
+        <td>
+            <a target="_blank" href="https://covid19.colorado.gov/for-coloradans/vaccine/where-can-i-get-vaccinated">
+                covid19.colorado.gov
+            </a>
+        </td>
+        <td>
+            State website with vaccine info
+        </td>
+    </tr>
      <tr><td>Connecticut</td><td>&nbsp;</td></tr>
      <tr><td>Delaware</td><td>&nbsp;</td></tr>
      <tr><td>Florida</td><td>&nbsp;</td></tr>
