--- a/index.html
+++ b/index.html
@@ -83,7 +83,17 @@
      <tr><td>Iowa</td><td>&nbsp;</td></tr>
      <tr><td>Kansas</td><td>&nbsp;</td></tr>
      <tr><td>Kentucky</td><td>&nbsp;</td></tr>
-     <tr><td>Louisiana</td><td>&nbsp;</td></tr>
+     <tr>
+        <td>Louisiana</td>
+        <td>
+            <a target="_blank" href="https://ldh.la.gov/covidvaccine-locations/">
+                State Website
+            </a>
+        </td>
+        <td>
+            List of vaccination sites
+        </td>
+    </tr>
      <tr><td>Maine</td><td>&nbsp;</td></tr>
      <tr><td>Maryland</td><td>&nbsp;</td></tr>
      <tr><td>Massachusetts</td><td>&nbsp;</td></tr>
