--- a/index.html
+++ b/index.html
@@ -107,7 +107,17 @@
      <tr><td>New Hampshire</td><td>&nbsp;</td></tr>
      <tr><td>New Jersey</td><td>&nbsp;</td></tr>
      <tr><td>New Mexico</td><td>&nbsp;</td></tr>
-     <tr><td>New York</td><td>&nbsp;</td></tr>
+     <tr>
+        <td>New York</td>
+        <td>
+            <a target="_blank" href="https://vaccinefinder.nyc.gov/">
+                NYC Vaccine Finder
+            </a>
+        </td>
+        <td>
+            Vaccine location search
+        </td>
+    </tr>
      <tr><td>North Carolina</td><td>&nbsp;</td></tr>
      <tr><td>North Dakota</td><td>&nbsp;</td></tr>
      <tr><td>Ohio</td><td>&nbsp;</td></tr>
