--- a/index.html
+++ b/index.html
@@ -97,7 +97,17 @@
      <tr><td>Maine</td><td>&nbsp;</td></tr>
      <tr><td>Maryland</td><td>&nbsp;</td></tr>
      <tr><td>Massachusetts</td><td>&nbsp;</td></tr>
-     <tr><td>Michigan</td><td>&nbsp;</td></tr>
+     <tr>
+        <td>Michigan</td>
+        <td>
+            <a target="_blank" href="https://www.covid19vaccinemi.com/">
+                covid19vaccinemi.com
+            </a>
+        </td>
+        <td>
+            Crowdsourced vaccine availability info
+        </td>
+    </tr>
      <tr><td>Minnesota</td><td>&nbsp;</td></tr>
      <tr><td>Mississippi</td><td>&nbsp;</td></tr>
      <tr><td>Missouri</td><td>&nbsp;</td></tr>
