--- a/airtable.html
+++ b/airtable.html
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <h1>Where can I get a vaccine?</h1>
 
 <h2>Compiling information on covid-19 vaccine availability</h2>
