--- a/index.html
+++ b/index.html
@@ -150,6 +150,12 @@
 
 
     <p>
+        <a href="/airtable.html">
+            View as airtable
+        </a>
+    </p>
+
+    <p>
         Want to add a link here? Contact @jkeesh on twitter
     </p>
 
