--- a/airtable.html
+++ b/airtable.html
@@ -8,15 +8,27 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<style>
+#container{
+    width: 80%;
+    margin: auto;
+}
+</style>
+
 </head>
 <body>
 
-<h1>Where can I get a vaccine?</h1>
+<div id="container">
 
-<h2>Compiling information on covid-19 vaccine availability</h2>
+    <h1>Where can I get a vaccine?</h1>
+
+    <h2>Compiling information on covid-19 vaccine availability</h2>
 
 
-<iframe class="airtable-embed" src="https://airtable.com/embed/shrbcR34EZWrRsUGa?backgroundColor=blue&viewControls=on" frameborder="0" width="100%" height="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
+    <iframe class="airtable-embed" src="https://airtable.com/embed/shrbcR34EZWrRsUGa?backgroundColor=blue&viewControls=on" frameborder="0" width="100%" height="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
+
+
+</div>
 
 </body>
 
