--- a/index.html
+++ b/index.html
@@ -138,7 +138,17 @@
      <tr><td>South Carolina</td><td>&nbsp;</td></tr>
      <tr><td>South Dakota</td><td>&nbsp;</td></tr>
      <tr><td>Tennessee</td><td>&nbsp;</td></tr>
-     <tr><td>Texas</td><td>&nbsp;</td></tr>
+     <tr>
+        <td>Texas</td>
+        <td>
+            <a href="https://www.arcgis.com/apps/webappviewer/index.html?id=3700a84845c5470cb0dc3ddace5c376b" target="_blank">
+                Texas Vaccine map
+            </a>
+        </td>
+        <td>
+            Texas vaccine map
+        </td>
+    </tr>
      <tr><td>Utah</td><td>&nbsp;</td></tr>
      <tr><td>Vermont</td><td>&nbsp;</td></tr>
      <tr><td>Virginia</td><td>&nbsp;</td></tr>
