--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 
     <h2>Compiling information on covid-19 vaccine availability</h2>
 
+    <p>
+        <a href="/airtable.html" target="_blank">
+            View as airtable
+        </a>
+    </p>
 
     <table class="table table-striped">
     <thead>
@@ -159,11 +164,6 @@
     </tbody></table>
 
 
-    <p>
-        <a href="/airtable.html">
-            View as airtable
-        </a>
-    </p>
 
     <p>
         Want to add a link here? Contact @jkeesh on twitter
