--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-#container{
-    width: 80%;
-    margin: auto;
-}
+    #container{
+        width: 80%;
+        margin: auto;
+    }
+    h1{
+        padding-top: 50px;
+    }
+
 </style>
 
 </head>
@@ -22,7 +26,7 @@
 
     <h1>Where can I get a vaccine?</h1>
 
-    <h2>Compiling information on covid-19 vaccine availability</h2>
+    <h3>Compiling information on covid-19 vaccine availability</h3>
 
 
     <iframe class="airtable-embed" src="https://airtable.com/embed/shrbcR34EZWrRsUGa?backgroundColor=blue&viewControls=on" frameborder="0" width="100%" height="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
