--- a/index.html
+++ b/index.html
@@ -37,12 +37,17 @@
 
     <h1>Where can I get a vaccine?</h1>
 
-    <h3>Compiling information on covid-19 vaccine availability</h3>
+    <h3>Compiling information on COVID-19 vaccine availability</h3>
 
 
-    <iframe class="airtable-embed" src="https://airtable.com/embed/shrbcR34EZWrRsUGa?backgroundColor=blue&viewControls=on" frameborder="0" width="100%" height="100%" style="background: transparent; border: 1px solid #ccc;"></iframe>
+    <iframe class="airtable-embed" src="https://airtable.com/embed/shrbcR34EZWrRsUGa?backgroundColor=blue&viewControls=on" frameborder="0" width="100%" height="700" style="background: transparent; border: 1px solid #ccc;"></iframe>
 
+    <br>
+    <br>
+    <h3>Crowdsourced efforts</h3>
+    <br>
 
+    <iframe class="airtable-embed" src="https://airtable.com/embed/shre2OmbINnZxWTe9?backgroundColor=blue&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
 
     <p>
         Want to add a link here? Contact @jkeesh on twitter
