--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <br>
     <br>
-    <h3>Crowdsourced projects</h3>
+    <h3>Volunteer-Led Projects</h3>
     <br>
 
     <iframe class="airtable-embed" src="https://airtable.com/embed/shre2OmbINnZxWTe9?backgroundColor=blue&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
