--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
     <h3>Volunteer-Led Projects</h3>
     <br>
 
-    <iframe class="airtable-embed" src="https://airtable.com/embed/shre2OmbINnZxWTe9?backgroundColor=blue&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+    <iframe class="airtable-embed" src="https://airtable.com/embed/shre2OmbINnZxWTe9?backgroundColor=blue&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="600" style="background: transparent; border: 1px solid #ccc;"></iframe>
 
+    <br><br>
     <p>
-        Want to add a link here? Contact @jkeesh on twitter
+        This list is maintained by Jeremy Keeshin. Want to add a link here or make an update? Contact <a href="https://twitter.com/jkeesh">@jkeesh</a> on twitter, or email <a href="mailto:hello@wherecanigetavaccine.com">hello@wherecanigetavaccine.com</a>
     </p>
 
     <a href="https://github.com/jkeesh/wherecanigetavaccine" target="_blank">
-        code
+        Code
     </a>
 
     <br><br>
